App Script (yani Google Sunucu tarafi) kodlamasi tamamlandi. - Kodlarda aciklama satirlari dahil olmak uzrere cok fazla Turkce bolum var. Muhtemelen projenin bundan sonraki bolumu acik kaynak olmayacak. Cunku veri kriptolama ile ilgili bir guncellestirmeyi eklemeyi planliyorum. Bunun disinda aciklama metinleri dahil tum proje Ingilizce'ye cevrilecek. Bu iki eylem birlikte yapilacagi icin, bir Ingilizce public surum olmayabilir. - Kodlarda zaman zaman gereksiz yerler ve kislatilabilecek yerler var. OZellikle Config sinifi daha etkin kullanilacak ve projenin degisken bazli yapisi guclendirilecek. Bu ilk olarak, farkli db tablo adlari ve sutun adlarinin kolayca implement edilmesini saglayacak. - SQL INJECTION riskini bu noktada tercih etmeye devam ediyoruz. Bununla birlikte, yine Config sinifini kullanarak SQL INJECTION riskini azaltma yonunde bir guncellestirmeyi de tercih etme ihtimali soz konusu. Zaman gosterecek... - Son olarak projenin nasil kurulacagi ile ilgili adim adim bir anlatim olusturmayi dusunuyorum. Umarim, yeterince iyi bir seyler yapabilirim. Acikcasi yeni bir modul yazmak, bunu yapmaktan daha kolayima geliyor :/

--- a/VIT_Module/4-Google_Form_(Evaluation)Installation/wrongCandiddateEmailTemplate.html
+++ b/VIT_Module/4-Google_Form_(Evaluation)Installation/wrongCandiddateEmailTemplate.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <p>Merhaba,</p>
-    <p>Girmis oldugunuz aday mail adresiyle baglantili bir kayit bulunmamaktadir. Lutfen aday mail adresini dogru yazdiginizdan emin olun ve tekrar deneyin.</p>
+    <p>Girmis oldugunuz basvuran mail adresiyle baglantili bir kayit bulunmamaktadir. Lutfen basvuran mail adresini dogru yazdiginizdan emin olun ve tekrar deneyin.</p>
     <p>Teşekkür ederiz.</p>
     <p>WeRHere Organization</p>
   </body>
