--- a/VIT_Module/4-Google_Form_(Evaluation)Installation/evaluationIsUpdatedTemplate.html
+++ b/VIT_Module/4-Google_Form_(Evaluation)Installation/evaluationIsUpdatedTemplate.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <p>Merhaba,</p>
-    <p><?= applicantName ?> <?= applicantSurname ?> isimli adayla ilgili değerlendirme güncellemeniz başarıyla alınmıştır.</p>
+    <p><?= applicantName ?> <?= applicantSurname ?> isimli basvuranla ilgili değerlendirme güncellemeniz başarıyla alınmıştır.</p>
     <p>Teşekkür ederiz.</p>
     <p>WeRHere Organization</p>
   </body>
